--- a/vignettes/x2CaseStudyChitosan.Rmd
+++ b/vignettes/x2CaseStudyChitosan.Rmd
@@ -7,9 +7,9 @@ editor_options:
   chunk_output_type: console
 ---
 
-## *Initiation*
+## Initiation
 
-*We assume you have the input data for a substance or material of interest and all the data describing the SimpleBox world to be created ready and thus can run the initWorld script.*
+We assume you have the input data for a substance or material of interest and all the data describing the SimpleBox world to be created ready and thus can run the initWorld script.
 
 ```{r}
 library(dplyr)
@@ -59,7 +59,7 @@ World$SetConst(RadS = rad_eq)
 World$fetchData("RhoS")
 ```
 
-## *Adjusting Parameters with Uncertainty*
+## Adjusting Parameters with Uncertainty
 
 Since attachment efficiencies (alpha) are very uncertain, below is a chunk where we can create distributions for these parameters. We start however with a deterministic calculation using averages.
 
@@ -108,7 +108,7 @@ World$UpdateKaas(mergeExisting = F)
 
 ```
 
-## *Adjusting Parameters to Match considered Scale*
+## Adjusting Parameters to Match considered Scale
 
 In this case study we are considering emission data only for Europe. By default the 'World' is represented by a nested regional scale, which is not relevant for the current assessment using emissions data only for Europe. Here we use the option to allocate part of the emissions to the regional scale based on the fraction of surface area in order to mimic not having a nested scale. In future one would be interested for instance in including a local or national scale as well. One could adjust the regional scale for this purpose.
 
@@ -149,39 +149,47 @@ AreaRegional <- Area$TotalArea[Area$Scale =="Regional"]
 AreaContinental <- Area$TotalArea[Area$Scale =="Continental"]
 fracReg <- AreaRegional/AreaContinental
 fracCont <- 1-fracReg
-print(fracReg)
-print(fracCont)
+
+FracRC <- tibble(
+  Scale_SBname = c("Regional","Continental"),
+  Abr_scale = c("R","C"),
+  AreaFraction = c(fracReg,fracCont)
+)
+
+
+print(FracRC)
+
 ```
 
-## *NewSolver*
+## NewSolver
 
-*Different solvers are available, basically:*
+Different solvers are available, basically:
 
-1.  *Solving the steadystate of the SimpleBox world*
+1.  Solving the steadystate of the SimpleBox world
 
-2.  *Solving in time the states of SimpleBox world*
+2.  Solving in time the states of SimpleBox world
 
-*Both will be illustrated bellow, but it starts with defining the solver you want to use by `world$NewSolver("[name of s_function]")`*
+Both will be illustrated bellow, but it starts with defining the solver you want to use by `world$NewSolver("[name of s_function]")`
 
-### *SBsteady*
+### SBsteady
 
 ```{r SBsteady}
 World$NewSolver("SBsteady")
 ```
 
-*What solving means is that using matrix algebra a set of differential equations is solved:*
+What solving means is that using matrix algebra a set of differential equations is solved:
 
-*`K %*% m + e`*
+`K %*% m + e`
 
-*Where:*
+Where:
 
-*K is the matrix of rate constants for each process describing the mass transfers to and from and out of a state (e.g. substance in freshwater (w1U) or small heteroagglomerate in natural soil (s1A)).*
+K is the matrix of rate constants for each process describing the mass transfers to and from and out of a state (e.g. substance in freshwater (w1U) or small heteroagglomerate in natural soil (s1A)).
 
-*m is the mass in each compartment, e.g. 0 at t=0.*
+m is the mass in each compartment, e.g. 0 at t=0.
 
-*e is the emission to each compartment per unit of time, e.g. 1 t/y.*
+e is the emission to each compartment per unit of time, e.g. 1 t/y.
 
-*To solve this set of differential equations we thus need an emission, e.g. 1 ton/year to air. The height of this emission is not*
+To solve this set of differential equations we thus need an emission, e.g. 1 ton/year to air. The height of this emission is not
 
 ```{r constant emission}
 emissions <- data.frame(Abbr = "aCS", Emis = 1000/(365.25*24*60*60)) # convert 1 t/y to si units: kg/s
@@ -189,36 +197,32 @@ emissions <- data.frame(Abbr = "aCS", Emis = 1000/(365.25*24*60*60)) # convert 1
 # TODO: explain what is the reason for this Abbr? Why is it not a relational table defining scale, compartment and species as for all other data?
 ```
 
-*Now er are ready to run the solver, which results in the mass in each compartment.*
+Now we are ready to run the solver, which results in the mass in each compartment.
 
 ```{r}
 World$Solve(emissions)
 ```
 
-## *SBdynamic*
+## SBdynamic
 
-*It is possible to solve the differential equations dynamicallly in time, but the optimal implementation is still work in progress.*
+We can also solve the differential equations dynamically in time, but the optimal implementation is still work in progress, see [issue](https://github.com/rivm-syso/SBoo/issues/111).
 
-```{r}
+```{r emission data}
 file_paths <- 
-  list.files("/data/emissions/",recursive = TRUE)
-
+  list.files("data/emissions",recursive = TRUE)
+Emissions <-
+  read_csv(paste0("data/emissions/",file_paths), id="file_name", col_names = c("RUN",0:24),skip = 1) # unit: Metric tonnes
 
 
 ```
 
-### *Prepare DPMFA data*
+### Prepare DPMFA data
 
-*Data from an DPMFA model should be prepared to fit the SBoo world. For instance the time unit should be correct, the mass unit is not as important as this will be the same in the output then, but for good measure we use kg.* This is the quick and dirty way, a more elegant way is till in progress.
+Data from an DPMFA model should be prepared to fit the SBoo world. For instance the time unit should be correct, the mass unit is not as important as this will be the same in the output then, but for good measure we use kg. This is the quick and dirty way, a more elegant way is till in progress as mentioned above.
 
 We define the compartments of the emission based on the DMPFA model.
 
 ```{r Emissions}
-file_paths <- 
-  list.files("/data/emissions/",recursive = TRUE)
-Emissions <-
-  read_csv(paste0("/data/emissions/",file_paths), id="file_name", col_names = c("RUN",0:24),skip = 1) # unit: Metric tonnes
-
 # TODO: solve for every RUN
 Emissions <- 
   Emissions |>
@@ -240,146 +244,41 @@ Emissions <-
                      str_detect(file_name, "(?i)Subsurface") ~ "Subsurface",
                      TRUE ~ "Other"),
          scale = 
-           case_when(str_detect(file_name, "(?i)EU") ~ "EU",
-                     str_detect(file_name, "(?i)Ireland") ~ "Ireland",
-                     str_detect(file_name, "(?i)Switzerland") ~ "Switzerland",
+           case_when(str_detect(file_name, "(?i)EU") ~ "EU_average",
+                     str_detect(file_name, "(?i)Ireland") ~ "EU_STsoil",
+                     str_detect(file_name, "(?i)Switzerland") ~ "EU_noSTsoil",
                      TRUE ~ "Other"),
          Substance = "GO-Chitosan",
   )
 
 ```
 
-### Scaling Input Data based on Density
+### Scaling Emission data based on material density
 
 When running for only GO or only Chitosan, you want to correct for the fact that it's partly Chitosan and partly GO through using the densities.
 
-```{r}
-# Weightfactor <- 7/8 
-# Emissions <- 
-#   Emissions |> mutate(Emissions$Emission_mean_kg , Emission_mean_kg* Weightfactor)
-```
+```{r DensityScaling}
 
-### Scaling Input Data based on World
+Weightfactor <- switch(substance,
+                       "GO-Chitosan" = 1,
+                       "Chitosan" = 7/8,
+                       "GO" = 1/8)
 
-In this chunk, we adjust for the fact that the input data for the DMPFA model is all Europe based. Hence we scale by the factor fracReg and fracCont to ensure we do not overestimate input. The regional data is thus overwritten by the function EmissionContinental\*fracReg
-
-```{r}
-
-SBEmissions2 <- 
-  Emissions |> mutate(
-    Abr_comp =  case_match(compartment,
-                           "Air" ~ "a",
-                           "SludgeTreatedSoil" ~ "s2",
-                           "SurfaceWater" ~ "w1",
-                           .default = NA
-    ),
-    Abr_scale =  case_match(scale,
-                            "EU" ~ "C",
-                            "Switzerland" ~ "R",
-                            .default = NA
-    ),
-    Abr_species = "S"
-    
-  ) |> drop_na() |>  mutate(Abr = paste0(Abr_comp,Abr_scale,Abr_species))
-
-update_emission <- function(SBEmissions2, cs_abr, rs_abr) {
-  cs_values <- SBEmissions2 |>
-    filter(Abr == cs_abr) |>
-    select(year, Emission_mean_kg)
-  
-  SBEmissions2 <- SBEmissions2 |>
-    left_join(cs_values, by = "year", suffix = c("", paste0("_", cs_abr))) |>
-    mutate(Emission_mean_kg = ifelse(Abr == rs_abr, get(paste0("Emission_mean_kg_", cs_abr)) * fracReg, Emission_mean_kg)) |>
-    select(-matches(paste0("Emission_mean_kg_", cs_abr)))
-  SBEmissions2 <- SBEmissions2 |>
-  mutate(Emission_mean_kg = ifelse(Abr == cs_abr, Emission_mean_kg * fracCont, Emission_mean_kg))
-  
-  return(SBEmissions2)
-  
-  
-}
-
-# Update Emission_mean_kg for all specified pairs of compartments
-compartment_pairs <- list(c("aCS", "aRS"), c("s2CS", "s2RS"), c("w1CS", "w1RS"))
-
-for (pair in compartment_pairs) {
-  SBEmissions2 <- update_emission(SBEmissions2, pair[1], pair[2])
-}
-
-SBEmissions2 <- 
-  SBEmissions2 |> 
-  mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> 
-  group_by(compartment,scale,Substance) |> 
-  summarise(n=n(),
-            EmisFun = list(approxfun(
-              data.frame(time_s = c(0,time_s), emis_kg=c(0,Emission_mean_kg)),rule = 1:1)))
-
-# EmisFun with input in seconds and output in kg's going from 0 to 25 years in seconds.
-SBEmissions2 <-
-  SBEmissions2 |> mutate(
-    Abr_comp =  case_match(compartment,
-                           "Air" ~ "a",
-                           "SludgeTreatedSoil" ~ "s2",
-                           "SurfaceWater" ~ "w1",
-                           .default = NA
-    ),
-    Abr_scale =  case_match(scale,
-                            "EU" ~ "C",
-                            "Switzerland" ~ "R",
-                            .default = NA
-    ),
-    Abr_species = "S"
-    
-  ) |> drop_na() |>  mutate(Abr = paste0(Abr_comp,Abr_scale,Abr_species))
-  funlist <- SBEmissions2$EmisFun
-  names(funlist) <- SBEmissions2$Abr
-  
-times <- seq(0, 25*365.25*24*3600, by = 10000)
-
-# Create a data frame to store the results
-results <- data.frame(Time = times)
-
-# Apply each function to the times and store the results
-for (name in names(funlist)) {
-  func <- funlist[[name]]
-  results[[name]] <- sapply(times, func)
-}
-
-# Convert the data frame to long format for ggplot2
-results_long <- results |>
-  pivot_longer(-Time, names_to = "Compartment", values_to = "Value")
-
-# Plot the results
-ggplot(results_long, aes(x = Time, y = Value, color = Compartment)) +
-  geom_line() +
-  labs(title = "Function Results Over Time",
-       x = "Time (seconds)",
-       y = "Function Value") +
-  theme_minimal()
-
-
-```
-
-Here, the chunk is where you would potentially have input data from both regional and continental scale.
-
-```{r}
 Emissions <-
-  Emissions |> 
-  # Emission in year 0 is the cumulative that is actually added up to the last second of the first year (so at time point (365.25*24*60*60)) at time 0 emission is 0.
-  mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> 
-  group_by(compartment,scale,Substance) |> 
-  summarise(n=n(),
-            EmisFun = list(approxfun(
-              data.frame(time_s = c(0,time_s), emis_kg=c(0,Emission_mean_kg)),rule = 1:1)))
+  Emissions |> mutate(Emission_mean_kg = Emission_mean_kg* Weightfactor,
+                      Emission_p50_kg = Emission_p50_kg*Weightfactor)
 
+head(Emissions)
 
+```
 
-# Assuming EmisFun is a list of functions indexed by compartment names
+### Scaling Input Data based on World (Regional nested in Continental)
 
+In this chunk, we adjust for the fact that the input data for the DMPFA model is all Europe based. Hence we scale by the factor fracReg and fracCont to still include the current regional scale (could alse be done differently). The regional data is thus a portion of the EU emission, scaled based on the land surface area.
 
-### filter and name the emissions that we actually have states for: 
-### needs manual tweaking for correct matching
-SBemissions <-
+```{r ScaleScaling}
+
+SBEmissions2 <- 
   Emissions |> mutate(
     Abr_comp =  case_match(compartment,
                            "Air" ~ "a",
@@ -388,76 +287,98 @@ SBemissions <-
                            .default = NA
     ),
     Abr_scale =  case_match(scale,
-                            "EU" ~ "C",
-                            "Switzerland" ~ "R",
+                            "EU_average" ~ "C",
                             .default = NA
     ),
     Abr_species = "S"
     
-  ) |> drop_na() |>  mutate(Abr = paste0(Abr_comp,Abr_scale,Abr_species))
+  ) |> drop_na() 
 
-  funlist <- SBemissions$EmisFun
-  names(funlist) <- SBemissions$Abr
+SBEmissions2 <-  
+  SBEmissions2 |> rbind(
+    SBEmissions2 |> 
+      mutate(
+        Abr_scale =  case_match(Abr_scale,
+                                "C" ~ "R",
+                                .default = NA
+        ),
+        scale = "EU_average"
+      )
+  ) |> full_join(FracRC) |> 
   
-funlist <- SBemissions$EmisFun
-names(funlist) <- SBemissions$Abr
+  mutate(Abr = paste0(Abr_comp,Abr_scale,Abr_species)) |> 
+  mutate(Emission_mean_kg = Emission_mean_kg*AreaFraction,
+         Emission_p50_kg = Emission_p50_kg*AreaFraction)
 
-# Generate the sequence of times (from 0 to 1 year in seconds)
-times <- seq(0, 25*365.25*24*3600, by = 10000)
-
-# Create a data frame to store the results
-results <- data.frame(Time = times)
-
-# Apply each function to the times and store the results
-for (name in names(funlist)) {
-  func <- funlist[[name]]
-  results[[name]] <- sapply(times, func)
-}
-
-# Convert the data frame to long format for ggplot2
-results_long <- results |>
-  pivot_longer(-Time, names_to = "Compartment", values_to = "Value")
-
-# Plot the results
-ggplot(results_long, aes(x = Time, y = Value, color = Compartment)) +
-  geom_line() +
-  labs(title = "Function Results Over Time",
-       x = "Time (seconds)",
-       y = "Function Value") +
-  theme_minimal()
+head(SBEmissions2)
 
 ```
 
-## Solving for constant input data
+### make time dependant emission functions
+
+```{r approxfuns}
+SBEmissions3 <- 
+  SBEmissions2 |> 
+  mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> ungroup() |> 
+  group_by(compartment,Abr_scale,Abr,Substance) |> 
+  summarise(n=n(),
+            EmisFun = list(
+              approxfun(
+                data.frame(time_s = c(0,time_s), 
+                           emis_kg=c(0,Emission_mean_kg)),
+                rule = 1:1)
+            )
+  )
+
+funlist <- SBEmissions3$EmisFun
+names(funlist) <- SBEmissions3$Abr
+
+times <- seq(0, 25*365.25*24*3600, by = 10000)
+
+CompartInterest <- "w1CS"
+
+time_s = c(0,(SBEmissions2 |> filter(Abr == CompartInterest) |> pull(year))*(365.25*24*60*60)+(365.25*24*60*60))
+emis_kg = c(0,(SBEmissions2 |> filter(Abr == CompartInterest) |> pull(Emission_mean_kg)))
+
+PlotEmisFun = funlist[[CompartInterest]]
+
+plot(time_s,
+     emis_kg)
+curve(PlotEmisFun,
+      add = TRUE)
+
+```
+
+
+## Dynamic solving for deterministic input data
 
 The chunk below gives the opportunity to Solve for constant input data. The chunk after that gives the opportunity to also vary SB Input data
 
-```{r, eval=FALSE}
+```{r DynamicSolve}
 
-Engine <-World$exportEngineR()
-interpolations <- funlist
 ##ODE
+
 SimpleBoxODE = function(t, m, parms) {
   
   with(as.list(c(parms, m)), {
     e <- c(rep(0, length(SBNames)))
-    for (name in names(interpolations)) {
-      e[grep(name, SBNames)] <- interpolations[[name]](t)
+    for (name in names(funlist)) {
+      e[grep(name, SBNames)] <- funlist[[name]](t)
     }
     dm <- K%*% m + e
     res <- c(dm)
     list(res, signal = e)
   })
 }
-SBNames <-colnames(Engine)
-print(SBNames)
-SB.m0 <- rep(0, length(SBNames))
+
+# print(SBNames)
 
 #Function to Solve
-SBsolve4 <- function( tmax = 1e10, nTIMES = 100) {
+SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine, funlist) {
   
-  SB.K <- Engine
-  
+  SB.K = Engine
+  SBNames = colnames(Engine)
+  SB.m0 <- rep(0, length(SBNames))
   SBtime <- seq(0,tmax,length.out = nTIMES)
   
   
@@ -465,13 +386,21 @@ SBsolve4 <- function( tmax = 1e10, nTIMES = 100) {
     y = as.numeric(SB.m0),
     times = SBtime ,
     func = SimpleBoxODE,
-    parms = list(K = SB.K, SBNames, interpolations),
+    parms = list(K = SB.K, SBNames=SBNames, funlist=funlist),
     rtol = 1e-10, atol = 1e-2)
   #if(as.character(class(deS)[1])!="data.frame") return (list(errorstate="error", deS))
+  colnames(out)[1:length(SBNames)+1] <- SBNames
+  colnames(out)[grep("signal",colnames(out))] <- paste("emis",SBNames,sep = "2")
+  out
   
 }
 #Solving
-Solution<- SBsolve4(tmax = 25*(365.25*24*3600), nTIMES = 130)
+Solution <- SBsolve4(tmax = 25*(365.25*24*3600), 
+                     nTIMES = 130,
+                     Engine = World$exportEngineR(),
+                     funlist = funlist)
+
+
 ```
 
 ## Varying Input Data
@@ -526,7 +455,7 @@ run_particle_simulation <- function(particle_sizes, emissions) {
 simulation_results <- run_particle_simulation(particle_sizes, emissions)
 sedimentation_results <- simulation_results$sedimentation_results
 engine_results <- simulation_results$engine_results
- 
+
 ```
 
 ## Solver Module
@@ -583,7 +512,7 @@ for (i in seq_along(engine_results)) {
 
 ```
 
-## *Output Processing*
+## Output Processing
 
 To move from the solution of the ODE solver to usable output data we need to split the output into corresponding mass data per compartment over time and emission signals over time. The first chunk is for one output, the latter chunk for varying input or emission data.
 
@@ -617,30 +546,30 @@ show(plot1)
 split_df <- function(df, solution_matrix) {
   # Extract the capital letters (A, R, C, T, M) in column names
   patterns <- unique(gsub("[^ARCTM]", "", colnames(df)))
-
+  
   # Function to adjust the dataframe
   adjust_df <- function(df) {
     df$time <- compartments$time
     return(df)
   }
-
+  
   # Split the dataframe based on the presence of specified capital letters using lapply
   split_dfs <- lapply(patterns, function(pattern) {
     cols <- grepl(pattern, colnames(df))
     adjusted_df <- df[, cols, drop = FALSE]
     adjust_df(adjusted_df)
   })
-
+  
   # Assign names to the split dataframes
   names(split_dfs) <- patterns
-
+  
   # Output the split dataframes
   invisible(lapply(names(split_dfs), function(pattern) {
     cat("Pattern:", pattern, "\n")
     print(split_dfs[[pattern]])
     cat("\n")
   }))
-
+  
   return(split_dfs)
 }
 
@@ -743,7 +672,7 @@ for (i in seq_along(Solutions)) {
   columns_to_keep <- !grepl(pattern, names(A))
   A <- A[, !columns_to_keep]
   A$time <- compartments$time
-
+  
   
   # Save the results in the list with dynamic names
   Solutions_all[[paste0("Solution_", i)]] <- list(
@@ -760,7 +689,7 @@ for (i in seq_along(Solutions)) {
 
 ```
 
-## *Plotting of Output*
+## Plotting of Output
 
 Below you can create a plot for one output, the chunk after that represents uncertainty based on multiple outputs.
 
@@ -863,7 +792,7 @@ ggplot(summary_stats_C, aes(x = as.numeric(time), y = mean_value, group = variab
   labs(title = "Mass in compartment with Standard Deviation for Compartment C",
        x = "Time",
        y = "Mean Value")
-       #color = "Variable").
+#color = "Variable").
 
 
 # Create a list to store the plots
