--- a/vignettes/x2CaseStudyChitosan.Rmd
+++ b/vignettes/x2CaseStudyChitosan.Rmd
@@ -21,7 +21,8 @@ substance <-  "GO-Chitosan"
 source("baseScripts/initWorld_onlyParticulate.R")
 World$fetchData("RhoS")
 World$fetchData("RadS")
-
+World$fetchData("landFRAC")
+World$fetchData("Area")
 
 ```
 
@@ -847,104 +848,84 @@ for (i in 1:length(plots_list)) {
 ##From mass to concentration 
 In this chunk we will convert the mass output into concentration output by calculating the respective volumes and calculating by this value. 
 ```{r mass to concentration, eval = FALSE}
-Volume <-World$fetchData("Volume")
+# Fetch necessary data
+Volume <- World$fetchData("Volume")
+Area <- World$fetchData("Area")
 FRACw <- World$fetchData("FRACw")
 FRACa <- World$fetchData("FRACa")
-Rho <-World$fetchData("rhoMatrix")
+Rho <- World$fetchData("rhoMatrix")
 
 
-accronym_map <- c("marinesediment" = "sd2",
-                  "freshwatersediment" = "sd1",
-                  "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
-                  "agriculturalsoil" = "s2",
-                  "naturalsoil" = "s1",
-                  "othersoil" = "s3",
-                  "air" = "a",
-                  "deepocean" = "w3",
-                  "sea" = "w2",
-                  "river" = "w1",
-                  "lake" = "w0", 
-                  "cloudwater" = "cw")
+# Define acronyms maps
+acronym_map <- c(
+  "marinesediment" = "sd2", "freshwatersediment" = "sd1", "lakesediment" = "sd0",
+  "agriculturalsoil" = "s2", "naturalsoil" = "s1", "othersoil" = "s3",
+  "air" = "a", "deepocean" = "w3", "sea" = "w2", "river" = "w1", "lake" = "w0", "cloudwater" = "cw"
+)
+acronym_map2 <- c("Arctic" = "A", "Moderate" = "M", "Tropic" = "T", "Continental" = "C", "Regional" = "R")
+acronym_map3 <- c("Dissolved" = "D", "Gas" = "G", "Large" = "P", "Small" = "A", "Solid" = "S", "Unbound" = "U")
 
-accronym_map2 <- c("Arctic" = "A",
-                   "Moderate" = "M",
-                   "Tropic" = "T",
-                   "Continental" = "C",
-                   "Regional" = "R")
+# Add compartment column to data
+Volume <- Volume |> mutate(compartment = paste0(acronym_map[SubCompart], acronym_map2[Scale]))
+FRACw <- FRACw |> mutate(compartment = paste0(acronym_map[SubCompart], acronym_map2[Scale]))
+FRACa <- FRACa |> mutate(compartment = paste0(acronym_map[SubCompart], acronym_map2[Scale]))
+Rho <- Rho |> mutate(compartment = paste0(acronym_map[SubCompart]))
 
-Volume <- Volume |> mutate(compartment =  paste0(accronym_map[SubCompart], 
-                                      accronym_map2[Scale]))
-FRACw <- FRACw |> mutate(compartment =  paste0(accronym_map[SubCompart], 
-                                               accronym_map2[Scale]))
-FRACa <- FRACa |> mutate(compartment =  paste0(accronym_map[SubCompart], 
-                                               accronym_map2[Scale]))
-Rho <-  Rho |> mutate(compartment =  paste0(accronym_map[SubCompart]))
-
-# List of columns in A that need transformation
-CompartmentsConc <-compartments
+CompartmentsConc <- compartments
+# List of columns in CompartmentsConc that need transformation
 columns_to_transform <- setdiff(names(CompartmentsConc), "time")
-print(columns_to_transform)
-# Loop through each column in A and calculate concentrations
+
+# Calculate concentrations by dividing by the corresponding volume
 for (col in columns_to_transform) {
-  # Extract the compartment prefix (e.g., 'aA' from 'aAS')
   compartment <- substr(col, 1, nchar(col) - 1)
-  
-  # Find the corresponding volume from Volume dataframe
   volume <- Volume$Volume[Volume$compartment == compartment]
-  
-  # Check if volume was found
   if (length(volume) == 1) {
-    # Divide the column values by the volume
     CompartmentsConc[[col]] <- CompartmentsConc[[col]] / volume
   } else {
     warning(paste("Volume not found for compartment", compartment))
   }
 }
 
+## Extract soil and sediment columns
 CompartmentsConc_soil_names <- grep("^s[123]", names(CompartmentsConc), value = TRUE)
+CompartmentsConc_sediment_names <- grep("^sd[123]", names(CompartmentsConc), value = TRUE)
+print(CompartmentsConc_sediment_names)
 CompartmentsConc_soil <- CompartmentsConc[, CompartmentsConc_soil_names]
-RhoWater <- Rho |> filter(SubCompart == "river")
+CompartmentsConc_sediment <- CompartmentsConc[, CompartmentsConc_sediment_names]
 
- #need both water and soil/sediment
-f_Soil.wetweight <- function(CompartmentsConc.soil, # in kg/m3 soil or sediment
-                             Fracw,
-                             Fraca,
-                             RHOsolid){
-  CompartmentsConc.soil*1000/(FRACw*RhoWater+(1-FRACw-FRACa)*Rho) # in g/kg (wet) soil
+
+# Combine soil and sediment columns
+CompartmentsConc_combined <- cbind(CompartmentsConc_soil, CompartmentsConc_sediment)
+
+# Get RhoWater value for river compartment
+RhoWater_value <- Rho$rhoMatrix[Rho$SubCompart == "river"]
+
+# Define function to adjust concentrations
+f_adjust_concentration <- function(CompConc, Fracw, Fraca, RHOsolid) {
+  CompConc * 1000 / (Fracw * RhoWater_value + (1 - Fracw - Fraca) * RHOsolid)
 }
 
-#Extract the parameters
+# Get compartment prefixes for combined soil and sediment
+compartment_prefixes_combined_scale <- substr(names(CompartmentsConc_combined), 1, 3)
+compartment_prefixes_combined <- substr(names(CompartmentsConc_combined), 1, 2)
 
-compartment_prefixes_scale <- substr(names(CompartmentsConc_soil), 1, 3)
-compartment_prefixes <- substr(names(CompartmentsConc_soil), 1, 2)
-print(compartment_prefixes)
+# Get corresponding FRACw, FRACa, and Rho values for combined soil and sediment
+FRACw_values_combined <- FRACw$FRACw[match(compartment_prefixes_combined_scale, FRACw$compartment)]
+FRACa_values_combined <- FRACa$FRACa[match(compartment_prefixes_combined_scale, FRACa$compartment)]
+Rho_values_combined <- Rho$rhoMatrix[match(compartment_prefixes_combined, Rho$compartment)]
 
-# Find corresponding FRACw, FRACa, and Rho values
-FRACw_values <- FRACw$FRACw[match(compartment_prefixes_scale, FRACw$compartment)]
-FRACa_values <- FRACa$FRACa[match(compartment_prefixes_scale, FRACa$compartment)]
-Rho_values <- Rho$rhoMatrix[match(compartment_prefixes, Rho$compartment)]
-# Retrieve RhoWater value
+# Apply the function to adjust combined soil and sediment concentrations
+CompartmentsConc_combined_adjusted <- mapply(
+  f_adjust_concentration,
+  CompartmentsConc_combined,
+  Fracw = FRACw_values_combined,
+  Fraca = FRACa_values_combined,
+  RHOsolid = Rho_values_combined,
+  SIMPLIFY = FALSE
+) |> as.data.frame()
 
-#Function f_Soil.wetweight
-f_Soil.wetweight <- function(CompartmentsConc.soil, Fracw, Fraca, RHOsolid) {
-  CompartmentsConc.soil * 1000 / (Fracw * RhoWater + (1 - Fracw - Fraca) * RHOsolid)
-}
-
-# Step 3: Apply the function to CompartmentsConc_soil
-CompartmentsConc_soil_adjusted <- CompartmentsConc_soil
-
-for (col in 1:ncol(CompartmentsConc_soil)) {
-  current_col <- CompartmentsConc_soil[, col]
-  current_Fracw <- FRACw_values[col]
-  current_Fraca <- FRACa_values[col]
-  current_Rho <- Rho_values[col]
-  
-  CompartmentsConc_soil_adjusted[, col] <- f_Soil.wetweight(current_col, current_Fracw, current_Fraca, current_Rho)
-}
-
-# Assigning column names to CompartmentsConc_soil_adjusted
-colnames(CompartmentsConc_soil_adjusted) <- colnames(CompartmentsConc_soil)
-print(CompartmentsConc_soil_adjusted)
-
+# Assign column names to adjusted data
+colnames(CompartmentsConc_combined_adjusted) <- colnames(CompartmentsConc_combined)
+print(CompartmentsConc_combined_adjusted)
 
 ```
